added docs, connected db
