# docs/openapi.yaml
@@ -47,11 +47,39 @@ paths:
       $ref: '../swagger/paths/tasks/{id}/patch.yaml'
 
   /auth:
-    post: 
+    post:
       $ref: ../swagger/paths/auth/post.yaml
+
+  # --- Weeks endpoints ---
+  /weeks/{weekNumber}:
+    $ref: '../swagger/paths/weeks/index.yaml'
+  /weeks/public/{weekNumber}:
+    $ref: '../swagger/paths/weeks/index.yaml'
+  /weeks/baby/{weekNumber}:
+    $ref: '../swagger/paths/weeks/baby.yaml'
+  /weeks/mom/{weekNumber}:
+    $ref: '../swagger/paths/weeks/mom.yaml'
 
 components:
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
+
+  schemas:
+    BabyData:
+      $ref: '../swagger/schemas/weeks/babyData.yaml'
+    MomData:
+      $ref: '../swagger/schemas/weeks/momData.yaml'
+    WeekData:
+      $ref: '../swagger/schemas/weeks/weekData.yaml'
+
+  responses:
+    NotFound:
+      $ref: '../swagger/components/responses/404.yaml'
+    WeekSuccess:
+      $ref: '../swagger/responses/weeks/weekSuccess.yaml'
+    BabySuccess:
+      $ref: '../swagger/responses/weeks/babySuccess.yaml'
+    MomSuccess:
+      $ref: '../swagger/responses/weeks/momSuccess.yaml'
