# src/routers/weeks.js
@@ -1,21 +1,20 @@
 import express from 'express';
 import { getWeek, getBabyWeek, getMomWeek } from '../controllers/weeks.js';
+import { ctrlWrapper } from '../controllers/ctrlWrapper.js';
 
 const weeksRouter = express.Router();
 
-// (authMiddleware)
 weeksRouter.get(
   '/:weekNumber',
   (req, res, next) => {
     req.user = { dueDate: '2025-12-01' };
     next();
   },
-  getWeek,
+  ctrlWrapper(getWeek),
 );
 
-weeksRouter.get('/public/:weekNumber', getWeek);
-
-weeksRouter.get('/baby/:weekNumber', getBabyWeek);
-weeksRouter.get('/mom/:weekNumber', getMomWeek);
+weeksRouter.get('/public/:weekNumber', ctrlWrapper(getWeek));
+weeksRouter.get('/baby/:weekNumber', ctrlWrapper(getBabyWeek));
+weeksRouter.get('/mom/:weekNumber', ctrlWrapper(getMomWeek));
 
 export default weeksRouter;
